# python-boilerplate

./: .pre-commit-config.yaml  pyproject.toml
