[tool.poetry]
name = "python-boilerplate"
version = "0.1.0"
description = ""
authors = ["bangyuwen <bangyuwen@gmail.com>"]
readme = "README.md"
packages = [{include = "python_boilerplate"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
